--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="../css/comon.css"/>
-<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+<link rel="stylesheet" type="text/css" href="css/comon.css"/>
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
 <title>温州广厦</title>
 </head>
 <body>
@@ -24,8 +24,8 @@
 <div id="sidebar">
     <ul>
 	  <li>
-	    <img src="../img/huanying.jpg"/>
-	    <img src="../img/gongrentu.jpg"/>
+	    <img src="img/huanying.jpg"/>
+	    <img src="img/gongrentu.jpg"/>
       </li>	
 	  <li>
 	  <p>
@@ -38,20 +38,20 @@
       <p>重质量创品牌优秀单位</p>
       <p>质量、服务诚信示范单位</p>
       <p>被龙湾建设局评为先进单位</p>
-      <p><a href="#">READ MORE<img src="../img/more.png"></a></P>
+      <p><a href="#">READ MORE<img src="img/more.png"></a></P>
 	  </li>
 	  <li class="hr"></li>
 	  <li><p>三盘领海</p>
           <p>全国最佳景观别墅</p>
           <p>全国100个顶级别墅区之一</p>
-		  <p><a href="#">READ MORE<img src="../img/more.png"></a></P>
+		  <p><a href="#">READ MORE<img src="img/more.png"></a></P>
       </li>
 	 </ul>
 </div>
 <div id="news">
    <ul>
 	  <li>
-	    <img src="../img/xinwen.jpg"/>
+	    <img src="img/xinwen.jpg"/>
       </li>	
 	  <li>
 	  <p>
@@ -64,34 +64,34 @@
       <p>温州NO.1豪宅即将出炉</p>
       <p>2007-9-28 9:27:2</p>
       <p>塘下金河大厦8月份进行预验收，并于年级交付...</p>
-      <p><a href="#">READ MORE<img src="../img/more.png"></a><P>
+      <p><a href="#">READ MORE<img src="img/more.png"></a><P>
 	  </li>
 	</ul>
 </div>	
 <div id="about">
     <ul>
 	  <li>
-	    <img src="../img/guanyu.jpg"/>
+	    <img src="img/guanyu.jpg"/>
       </li>	
 	  <li>
-	    <img src="../img/shineitu.jpg"/>
+	    <img src="img/shineitu.jpg"/>
 	  </li>
 	  <li>
 	    <p>
 		温州广厦建设开发有限公司,法定代表人:余文龙;企业类型:有限责任公司:经营范围:房地产开发(凭资质证经营)。建筑材料销售。公司现有职工40余人，其中专业技术人员28人(高级职称7人,中级职称21人)...
 		</p>
-		<p><a href="#">READ MORE<img src="../img/more.png"></a></P>
+		<p><a href="#">READ MORE<img src="img/more.png"></a></P>
 	  </li>
 	</ul>
 </div>
 <div id="estate">
    <ul><li> <div class="hr"></div></li>
-       <li><img src="../img/fengjingtu.jpg"/></li>
-       <li><img src="../img/xinloupan.jpg"/><li>
+       <li><img src="img/fengjingtu.jpg"/></li>
+       <li><img src="img/xinloupan.jpg"/><li>
        <li><p>三盘·领海
 三盘领海坐落在温州著名风景区--洞头三盘岛西边,海中湖中间,也是温州到洞头县城的必经之路,与温州市区50公里,与洞头县城只需3分钟...
          </p>
-		 <p><a href="#">READ MORE<img src="../img/more.png"></a></P>
+		 <p><a href="#">READ MORE<img src="img/more.png"></a></P>
 		</li>
    </ul>
 </div>
